# BigIntProject

./: CMakeLists.txt  README.md  arif.cpp  Руководство оператора.docx  Руководство программиста.odt
include/BigInt/: BigInt.h
src/: BigInt.cpp
